# tableau-mcp-ai-chat

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: auth.py  dashboard.py  main.py  tableau_mcp.py
client/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.tsx  routes.tsx
client/src/config/: api.ts  (+2 more)
client_bk/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
client_bk/src/: App.tsx  index.css  main.tsx
frontend/: .env.local  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: MarkdownRenderer.tsx  Navigation.tsx  TableauDashboard.tsx  TableauPulse.tsx  TableauPulseEmbed.tsx  TableauPulseEmbedSimple.tsx  ThemeRegistry.tsx
frontend/constants/: constants.ts
frontend/contexts/: JWTContext.tsx
scripts/: setup.sh  start-servers.sh  stop-servers.sh
server/: .env.example  .gitignore  README.md  pyproject.toml
server/app/: auth.py  bedrock.py  dashboard.py  dependencies.py  main.py  tableau_mcp.py
server/app/config/: prompts.py  settings.py
server/app/core/: exceptions.py  html_sanitizer.py  logging.py  response_utils.py
server/app/models/: requests.py  responses.py
server/app/routers/: auth.py  chat.py  dashboard.py  settings.py
server/app/services/: auth_service.py  bedrock_service.py  dashboard_service.py  mcp_service.py
server/app/tests/: test_html_sanitizer.py
(+73 files in other folders)
